<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RestaurantFragment">

    <ImageView
        android:id="@+id/restaurant_cover"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/restaurant0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/restaurant_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/ic_back_btn"
            app:layout_constraintBottom_toBottomOf="@id/restaurant_top_bar"
            app:layout_constraintStart_toStartOf="@id/restaurant_top_bar"
            app:layout_constraintTop_toTopOf="@id/restaurant_top_bar">

        </ImageView>

        <ImageView
            android:id="@+id/btn_fav"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/ic_fav_btn"
            app:layout_constraintBottom_toBottomOf="@id/restaurant_top_bar"
            app:layout_constraintEnd_toEndOf="@id/restaurant_top_bar"
            app:layout_constraintTop_toTopOf="@id/restaurant_top_bar">

        </ImageView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/restaurant_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/restaurant_cover">

        <TextView
            android:id="@+id/restaurant_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recent_orders"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/rating"
            app:layout_constraintStart_toStartOf="@id/restaurant_details"
            app:layout_constraintTop_toTopOf="@id/restaurant_details" />

        <TextView
            android:id="@+id/restaurant_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/restaurant_details"
            app:layout_constraintTop_toTopOf="@id/restaurant_details" />

        <ListView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/restaurant_name"
            tools:layout_width="24dp"
            tools:listitem="@layout/rating_bar" />

        <TextView
            android:id="@+id/restaurant_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recent_orders"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/restaurant_details"
            app:layout_constraintTop_toBottomOf="@id/rating" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_reviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_btn_rounded"
        android:text="@string/reviews"
        android:paddingHorizontal="30dp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_contact"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/restaurant_details" />

    <Button
        android:id="@+id/btn_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_btn_rounded"
        android:text="@string/contact"
        android:textStyle="bold"
        android:paddingHorizontal="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_reviews"
        app:layout_constraintTop_toBottomOf="@id/restaurant_details">

    </Button>
    <TextView
        android:id="@+id/restaurant_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:layout_marginVertical="20dp"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/btn_contact"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
         />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/grid_restaurant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/restaurant_menu"
        tools:listitem="@layout/food_item"
        tools:layout_height="180dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>